<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/messageRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">


        <github.ankushsachdeva.emojicon.EmojiconEditText
            android:id="@+id/messageEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:paddingTop="20dp" />

        <ListView
            android:id="@+id/lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/messageEditText"
        ></ListView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/recordBtn"
                android:src="@drawable/ic_mic_black_24px"
                android:background="@drawable/button_ripple"
                android:layout_gravity="center_vertical"
                android:padding="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <ImageView
                android:id="@+id/emoji_btn"
                android:src="@drawable/smiley"
                android:background="@drawable/button_ripple"
                android:layout_gravity="center_vertical"
                android:padding="16dp"
                android:maxWidth="50px"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0.31"/>


            <ImageButton
                android:id="@+id/cameraButton"
                android:src="@drawable/ic_camera_alt_black_24px"
                android:background="@drawable/button_ripple"
                android:layout_gravity="center_vertical"
                android:padding="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <ImageButton
                android:id="@+id/locationButton"
                android:src="@drawable/ic_my_location_black_24px"
                android:background="@drawable/button_ripple"
                android:layout_gravity="center_vertical"
                android:padding="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageButton
                android:id="@+id/shareImageButton"
                android:src="@drawable/ic_image_black_24px"
                android:background="@drawable/button_ripple"
                android:layout_gravity="center"
                android:padding="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/sendButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_send_black_24"/>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>


</RelativeLayout>
